# Olzw

./: .gitignore  README.md  dune-project  olzw.opam
lib/: compressor.ml  compressor.mli  decompressor.ml  decompressor.mli  dictionary.ml  dictionary.mli  dune  pack.c  pack.ml  pack.mli
